fix: retrieve certain fields
