# src/models/user.public.info.ts
@@ -1,0 +1,7 @@
+export interface UserPublicInfo {
+    name: string;
+    email: string;
+    urlProfilePhoto: string | null;
+    description: string | null;
+  }
+  
